the footer is completed the frontend

--- a/src/app/styles/abstracts/_index.module.scss
+++ b/src/app/styles/abstracts/_index.module.scss
@@ -1,3 +1,4 @@
 @forward '../abstracts/colors';
 @forward '../abstracts/fonts';
-@forward '../abstracts/breakpoints.modules'
+@forward '../abstracts/breakpoints.modules';
+@forward '../abstracts/spacing.module'
