--- a/src/app/styles/abstracts/_breakpoints.modules.scss
+++ b/src/app/styles/abstracts/_breakpoints.modules.scss
@@ -6,23 +6,30 @@ $small-mobile: 320px;
 
 
 
-
-
-
-// Apply twelve-column-grid mixin to .section
-.section {
-    width: 100vw;      /* 100% of viewport width */
-    height: 100vh;     /* 100% of viewport height */
-    margin: 0;         /* Remove any default margins */
-    padding: 0;   
-    background-color: orange; 
-    display: flex;     /* Enable flexbox */
-    flex-direction: row; /* Display items in a row */
-    justify-content: center; /* Center items horizontally */
-    align-items: center;    /* Center items vertically */
-
-    //* Remove any default padding */
+.full-width {
+    width: 100vw;  
+    height: 100vh;  
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; 
+    background-color: pink;
 }
+
+.section {
+    flex: 1;
+    min-height: 100vh;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    background-color: orange; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; 
+}
+/* ... other styles ... */
+
 
 /* ... other styles ... */
 
@@ -42,8 +49,8 @@ $small-mobile: 320px;
     box-sizing: border-box;
     flex: 0 0 calc((100% - 48px) / 12); /* Subtracting 24px for the margin between columns */
     padding: 0;
-    background-color: blue;
-    border: 1px solid #fff;
+  //  background-color: blue;
+    //border: 1px solid #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     box-sizing: border-box;
     overflow: hidden;
@@ -62,7 +69,8 @@ $small-mobile: 320px;
 /* ... other styles ... */
 
   .grid-item + .grid-item {
-    margin-left: 1%; 
+   // margin-left: 1%; 
+   margin-left: 0;
   }
 
   .span-6 {
@@ -81,7 +89,8 @@ $small-mobile: 320px;
 @media (min-width: $large-desktop) {
     /* Your styles for large desktop here */
     .section {
-        width: $large-desktop;      /* 100% of viewport width */        /* Remove any default padding */
+        width: $large-desktop; 
+      //  background-color: bisque;     /* 100% of viewport width */        /* Remove any default padding */
     }
 }
 
@@ -89,25 +98,44 @@ $small-mobile: 320px;
 @media (min-width: $normal-desktop) and (max-width: 1727px) {
     /* Your styles for normal desktop here */
     .section {
-        width: $normal-desktop;      /* 100% of viewport width */        /* Remove any default padding */
+        width: $normal-desktop;  
+       // background-color: blueviolet;    /* 100% of viewport width */        /* Remove any default padding */
     }
 }
 
 /* Media query for tablet */
 @media (min-width: $tablet) and (max-width: 1439px) {
     /* Your styles for tablet here */
+
+    .grid-item {
+        flex: 0 0 100%; /* Make items take up full width */
+        margin-left: 0; /* Remove left margin */
+        margin-right: 0; /* Remove right margin */
+      //  background-color: maroon;
+    }
+
+    .section {
+        width: $tablet;      /* 100% of viewport width */        /* Remove any default padding */
+    }
 }
 
 /* Media query for large mobile */
 @media (min-width: $large-mobile) and (max-width: 833px) {
+
+    .section {
+        width: $large-mobile;      /* 100% of viewport width */        /* Remove any default padding */
+    }
     .grid-container {
         flex-direction: column; /* Stack items vertically */
+        max-width: $large-mobile;
+        width: 100%;
     }
 
     .grid-item {
         flex: 0 0 100%; /* Make items take up full width */
         margin-left: 0; /* Remove left margin */
         margin-right: 0; /* Remove right margin */
+       // background-color: aqua;
     }
 
     .grid-item + .grid-item {
@@ -126,14 +154,20 @@ $small-mobile: 320px;
 
 /* Media query for small mobile */
 @media (max-width: $large-mobile) {
+    .section {
+        width: $small-mobile;      /* 100% of viewport width */        /* Remove any default padding */
+    }
     .grid-container {
         flex-direction: column; /* Stack items vertically */
+        max-width: $small-mobile;
+        width: 100%;
     }
 
     .grid-item {
         flex: 0 0 100%; /* Make items take up full width */
         margin-left: 0; /* Remove left margin */
         margin-right: 0; /* Remove right margin */
+       // background-color: red;
     }
 
     .grid-item + .grid-item {
