--- a/src/app/styles/abstracts/_fonts.scss
+++ b/src/app/styles/abstracts/_fonts.scss
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Yeseva+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 $mons:'Montserrat', sans-serif;
 $rob:'Roboto', sans-serif;
@@ -15,7 +15,7 @@ $rob:'Roboto', sans-serif;
   
 //the montserrat fonts 
 
-  .M48bold{
+  .M48-bold{
     @include custom-font($mons,48px, bold, 56px);
   }
 
@@ -47,18 +47,23 @@ $rob:'Roboto', sans-serif;
 
   //the roboto fonts
 
-  .M24-semi_bold{
+  .R24-semi_bold{
     @include custom-font($rob,24px, 600, 32px);
   }
 
-  .M20-semi_bold{
+  .R20-semi_bold{
     @include custom-font($rob,20px, 600, 28px);
   }
 
-  .M18-semi_bold{
-    @include custom-font($rob,18px, 600, 24px);
+  .R18-semi_bold{
+    @include custom-font($rob,18px, 500, 24px);
   }
 
-  .M18-regular{
+  .R18-regular{
     @include custom-font($rob,18px, 400, 24px);
+  }
+
+
+  .R16-semi_bold{
+    @include custom-font($rob,16px, 500, 24px);
   }
