--- a/src/app/styles/abstracts/_index.module.scss
+++ b/src/app/styles/abstracts/_index.module.scss
@@ -1,4 +1,5 @@
 @forward '../abstracts/colors';
 @forward '../abstracts/fonts';
 @forward '../abstracts/breakpoints.modules';
-@forward '../abstracts/spacing.module'
+@forward '../abstracts/spacing.module';
+@forward '../abstracts/links.modules';
