finally done with the navigation --- will CSS be my 13th reason?

--- a/src/app/styles/abstracts/_links.modules.scss
+++ b/src/app/styles/abstracts/_links.modules.scss
@@ -4,6 +4,10 @@
     text-decoration: underline;
 }
 
+.main-links-active{
+    color: ds.$primaryBlue;
+}
+
 .menu-link{
     margin-bottom: 16px;
     color: ds.$black;
