--- a/src/app/styles/components/navigation/footer.module.scss
+++ b/src/app/styles/components/navigation/footer.module.scss
@@ -8,7 +8,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center; 
-    background-color: black;
+    background-color: ds.$black;
 }
 
 
